--- a/homework/2024/Coursework_mie37_2024.ipynb
+++ b/homework/2024/Coursework_mie37_2024.ipynb
@@ -18,8 +18,8 @@
     "__Surname__: \n",
     "\n",
     "After completing the following questions, send the edited notebook to `pablo.winant@ensae.fr`.\n",
-    "You can work in (small) teams but are not allowed to copy/paste andy code.\n",
-    "Don't forget to comment your code and take any initiative, you find relevant.\n"
+    "You can work in (small) teams but are not allowed to copy/paste any code.\n",
+    "Don't forget to comment your code and take any initiative you find relevant.\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "We seek to solve numerically the following consumption-saving problem using the time-iteration algorithm.\n",
     "\n",
     "\n",
-    "Income is an iid process $\\epsilon_t$ with $\\epsilon_t \\sim \\mathcal{N}(\\sigma)$ ($\\sigma$ is standard deviation). Interest rate is $r\\in [1,\\frac{1}{\\beta}[$ where $\\beta\\in]0,1[$ is the discount factor.\n",
+    "Income is an iid normally distributed process with standard deviation $\\sigma$. Interest rate is $r\\in [1,\\frac{1}{\\beta}[$ where $\\beta\\in]0,1[$ is the discount factor.\n",
     "\n",
     "\n",
     "Available income is $w_t$ and follows the law of motion:\n",
@@ -44,7 +44,7 @@
     "$$w_{t+1} = e^ {\\epsilon_{t+1}} +  (w_{t} - c_{t}) r$$\n",
     "\n",
     "\n",
-    "where $c_t \\in ]0,w_t]$ is consumption chosen at date $t$, with an implicit no borrowing constraint.\n"
+    "where $c_t \\in ]0,w_t]$ is consumption chosen at date $t$ (which includes an implicit no borrowing constraint).\n"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "\n",
     "The solution of the model is a decision rule $c(w)$.\n",
     "\n",
-    "In what follows, we will approximate it by a function defined over $[0,w_{max}[$ by the values it takes on $N$ linearly spaced grid points.\n",
+    "In what follows, we will approximate it by a function defined over $[0,w_{max}[$, pinned down by the values it takes on $N$ linearly spaced grid points.\n",
     "\n",
     "\n",
     "In our solutions algorithm, we will use the initial guess $\\varphi_0(w) = min(w, p_0+p_1(w-p_0))$.\n",
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "__Create a structure `approx` to represent the approximation space. This structure should contain the parameters, as well as a `points::Vector{Float64}`  array with the list of grid points.__\n",
+    "__Create a structure `approx` to represent the approximation space. This structure should contain the parameters, as well as a `points::Vector{Float64}`  array coontaining the (regularly spaced) list of grid points.__\n",
     "\n",
     "To start with you can take $w_{max}=5$, $N=20$, $p_0=0.95, p_1=0.03$ but don't hesitate to change these values later if needed."
    ]
@@ -214,7 +214,7 @@
    "id": "a4ca0ee2",
    "metadata": {},
    "source": [
-    "__Bonus: add the the graph the function obtained using cubic spline interpolation. What *could* be the problem?__"
+    "__Bonus: add to the graph the function obtained using cubic spline interpolation. What *could* be the problem?__"
    ]
   },
   {
@@ -354,9 +354,7 @@
    "cell_type": "markdown",
    "id": "7b0596e2",
    "metadata": {},
-   "source": [
-    "\\"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -369,12 +367,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3785fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "504cfb1f",
    "metadata": {},
    "source": [
     "__(prep): Find the vector of all the optimal consumption choices on the grid today, given the decision rule tomorrow.__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4431b24f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
